# RustPracticeGame

./: README.md  practice_game.code-workspace  save_var_file.txt
new_dole_quest/: Cargo.toml
new_dole_quest/NewDoleQuestLevelEditor/: camera_move.gd  camera_move.tscn  icon.svg.import  project.godot  tile_map_export.gd
new_dole_quest/NewDoleQuestLevelEditor/Maps/: collision_map.tres  entity_map.tres  map.map2d  map_collision.col
new_dole_quest/NewDoleQuestLevelEditor/Maps/00_test_level/: map.map2d  map_header.cfg  tesD32E.tmp  test_level.tres  test_level.tscn
new_dole_quest/NewDoleQuestLevelEditor/Maps/01_second_test_level/: second_test_level.tscn
new_dole_quest/assets/: mapstest_level.map2d
new_dole_quest/assets/maps/: 000_second_test_map.map2d  test_level.map2d
new_dole_quest/assets/player/: player_model.blend  player_model.blend1
new_dole_quest/assets/player/player_model/: player_model.kra  (+2 more)
new_dole_quest/assets/shaders/: map_material.wgsl
new_dole_quest/config/: input_config.cfg
new_dole_quest/examples/: most_basic_app.rs
new_dole_quest/examples/plugins/: basic_plugin.rs
new_dole_quest/examples/queries/: immutable_queries.rs  mutable_queries.rs
new_dole_quest/examples/resources/: timer_resource.rs
new_dole_quest/src/: actions.rs  animation.rs  components.rs  main.rs  maps.rs  utilities.rs
new_dole_quest/src/actions/: parse_actions.rs
new_dole_quest/src/animation/: sprite_animation.rs  unit_angle.rs
new_dole_quest/src/components/: character.rs  collider.rs  object.rs  player.rs
new_dole_quest/src/maps/: map_builder.rs  map_material.rs
(+36 files in other folders)
