[package]
name = "new_dole_quest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] } # DEBUG BUILDS
#bevy = { version = "0.13.2" } # RELEASE BUILDS

# needed for workspaces - remove if this causes issues (probably comment)
[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

## PERFORMANCE WITH DEBUG BUILDS - better than developing with release builds!
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
